# GPU-Accelerated-Local-Learning-Rule

./: .gitignore  .gitmodules  1darraytest.cpp  Arrays.cpp  Arrays.h  CMakeLists.txt  LICENSE  Model.cpp  Model.h  README.md  Util.cpp  least_squares.py  main.cpp  readme.md  run.sh  stats.py  stats.sh
saved/: 100_figure2a.fig  figure2a.fig
stats/: 2022-04-08T16:54:51.188410  2022-04-08T16:55:46.041686  2022-04-08T16:57:37.592840  2022-04-08T16:59:07.459477  2022-04-08T16:59:49.145658
